1º portifolio com HTML e CSS

--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
             </p>
             
         </section>
-        <img class="imgPrincipal" src="assets/Imagem.jpg" alt="Foto de Kennes Eduado sorrindo">  
+        <img class="container_imgPrincipal" src="assets/Imagem.jpg" alt="Foto de Kennes Eduado sorrindo">  
     </main>
     <footer class="rodape">
         <p>Desenvolvido por Kennes Eduardo</p>
