--- a/curriculo.html
+++ b/curriculo.html
@@ -17,15 +17,20 @@
     </header>
     <main class="container_curriculo">
         <section class="container_curriculo_conteudo">
+
+            <h1 class="container_conteudo_titulo">
+                <strong class="destaques">Curriculo</strong>
+            </h1>
+
             <div>
-                <h1 class="container_conteudo_titulo">
-                    <strong class="destaques">Curriculo</strong>
-                </h1>
+                <h2 class="container_conteudo_subtitulo">
+                    <strong class="destaques">Sobre mim</strong>
+                </h2>
                 <p class="container_conteudo_paragrafo">
                     Me chamo Kennes Eduardo Marques Silva, tenho 22 anos sou casado, formado em Técnico em informática e cursando Tecnologia em Análise e Desenvolvimento de Sistema, atualmente no 5° período, estou a procura da minha primeira experiência de trabalho na area de desenvolvedor Front-end, fazendo assim com que eu desenvolva minhas habilidades e contribuindo para para o sucesso da empresa.
-                </p>
-                
+                </p>  
             </div>
+
             <div>
                 <h2 class="container_conteudo_subtitulo">
                     <strong class="destaques">Informações de contato</strong>
@@ -34,8 +39,10 @@
                     <li>Rua Jose Demétrio, 448 Nadime 2, Ituiutaba-MG</li>
                     <li>(34) 9 9767-7652</li>
                     <li>Kenneseduardo@gmail.com</li>
-                    <li>https://github.com/KennesEduardo</li>
-                    <li>https://www.linkedin.com/in/kennes-eduardo-52165b239/</li>
+                    <li>https://github.com/
+                        KennesEduardo</li>
+                    <li>https://www.linkedin.com/in/
+                        kennes-eduardo-52165b239/</li>
                 </ul>
             </div>
 
@@ -45,12 +52,11 @@
                 </h2>
                 <hp class="container_conteudo_paragrafo">Lourdes imobiliária - Auxiliar de escritório | desde 01/2019 a 02/2023</p>
                 <p class="container_conteudo_paragrafo">Empresa correspondente bancário Caixa onde realizava as seguintes tarefas: </p>
-                <p class="container_conteudo_paragrafo">
                 <ul class="container_conteudo_paragrafo">
-                    <li>Coleta de informações cadastrais e análise de crédito;</li>
+                    <li>Coleta de informações cadastrais e análise de crédito.</li>
                     <li>Recepção e encaminhamento de propostas de abertura de contas.</li>
-                    <li>Solicitação de empréstimos pessoais, empresariais e financiamentos;</li>
-                    <li>Solicitação de cartão de crédito e débito para trabalhadores e aposentados;</li>
+                    <li>Solicitação de empréstimos pessoais, empresariais e financiamentos.</li>
+                    <li>Solicitação de cartão de crédito e débito para trabalhadores e aposentados.</li>
                 </ul>
                 </p>
             </div>
